# Netgen-test_code_part02

./: .gitignore  CMakeLists.txt  build_project.sh  cjz_nodsp.sh  cjz_nodsp_copy.sh
merge_mesh/: CMakeLists.txt
mesh_occ_mpi/: 3DNgmesher.cpp  3DNgmesher.h  CMakeLists.txt  createElmerOutput.h  occmesh_MPI_main.cpp  parallelMeshData.h  test.dev.c  test.sh  test_mesh.sh
